Update README.md with new content